fix spacing of featured work items on mobile

--- a/styles.css
+++ b/styles.css
@@ -221,7 +221,7 @@ main {
 }
 
 .gallery-item {
-  width: 370px;
+  width: 310px;
   height: 200px;
   border: var(--space-xs) solid #ccccee;
   border-radius: 4px;
